--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./images/favicon-32x32.png"
+      href="https://github.com/Z0XZ/qr-code-component-main/blob/master/images/favicon-32x32.png"
     />
     <link rel="stylesheet" href="styles\styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -27,7 +27,7 @@
       <ul id="carditems">
         <li>
           <img
-            src="/images/image-qr-code.png"
+            src="https://github.com/Z0XZ/qr-code-component-main/blob/master/images/image-qr-code.png"
             alt="QR-code link to frontendmentor.io"
             width=""
           />
