--- a/index.html
+++ b/index.html
@@ -14,10 +14,7 @@
     <link rel="stylesheet" href="styles\styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet" />
     <title>Frontend Mentor | QR code component</title>
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -35,18 +32,13 @@
           <h2>Improve your front-end skills by building projects</h2>
         </li>
         <li>
-          <p>
-            Scan the QR code to visit Frontend Mentor and take your coding skills to
-            the next level
-          </p>
+          <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
         </li>
       </ul>
     </div>
     <footer class="attribution">
       Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Jon Bjarne Bø/</a>.
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Jon Bjarne Bø/</a>.
     </footer>
   </body>
 </html>
